--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,15 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button
-        defaultHref="/"
-        mode="ios"
-        text="Regresar">
-      </ion-back-button>
-    </ion-buttons>
-    <ion-title>action-sheet</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header
+  title="Action Sheet">
+</app-header>
 
 <ion-content>
 
