--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -2,6 +2,11 @@
   title="Action Sheet">
 </app-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+
+  <ion-button (click)="onClick()" expand="block">
+    Mostrar action sheet
+  </ion-button>
+
 
 </ion-content>
