--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -2,6 +2,18 @@
   title="Alert">
 </app-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+
+<ion-button (click)="presentAlert()" expand="block">
+  Alert
+</ion-button>
+
+<ion-button (click)="presentAlertMultipleButtons()" expand="block">
+  Alert MultiButtons
+</ion-button>
+
+<ion-button (click)="presentAlertPrompt()" expand="block">
+  present Alert Prompt
+</ion-button>
 
 </ion-content>
