Added the ion-avatar components

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,4 +1,8 @@
-<app-header title="Home"></app-header>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Components</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content>
   <ion-list>
