Added the float buttom

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,6 +4,6 @@
       <ion-back-button defaultHref="/" mode="ios" text="Regresar">
       </ion-back-button>
     </ion-buttons>
-    <ion-title>{{title}}</ion-title>
+    <ion-title>{{title | titlecase}}</ion-title>
   </ion-toolbar>
 </ion-header>
